# deskgui

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  conanfile.py
.github/workflows/: linux_build.yml  macos_build.yml  windows_build.yml
benchmark/: CMakeLists.txt
benchmark/source/: event_bus_benchmark.cpp
cmake/: catch2.cmake  nlohmann.cmake  nuget.cmake  platform_webview.cmake  rapidjson.cmake
cmake/resource_compiler/: generate_resources.py  mime_types.py  resource_compiler.cmake  resource_content.py  resource_library.py  zlib.cmake
examples/: CMakeLists.txt
examples/basic_example/: CMakeLists.txt  basic_example.cpp
examples/callback_example/: CMakeLists.txt  callback_example.cpp
examples/callback_example/assets/: index.html  main.js  styles.css
examples/drag_and_drop_example/: CMakeLists.txt  drag_and_drop_example.cpp
examples/drag_and_drop_example/assets/: index.html
examples/embedded_resources_example/: CMakeLists.txt  embedded_resources_example.cpp
examples/embedded_resources_example/assets/: index.html
examples/embedded_resources_example/assets/src/: main.js  styles.css
examples/splashscreen_example/: CMakeLists.txt  splashscreen_example.cpp
examples/splashscreen_example/assets/: helloworld.html  loading.html
include/deskgui/: app.h  app_handler.h  event_bus.h  events.h  queue.h  resource_compiler.h  types.h  webview.h  webview_options.h  window.h
source/: app_common.cpp  webview.cpp  webview_common.cpp  window.cpp  window_common.cpp
source/interfaces/: webview_impl.h  window_impl.h
source/js/: drop.h  events.h
source/platform/darwin/: app_darwin.mm  app_handler_darwin.h  app_handler_darwin.mm  webview_darwin.mm  webview_darwin_impl.h  webview_darwin_impl.mm  webview_impl_darwin.mm  webview_platform_darwin.h  webview_platform_darwin.mm  window_darwin.mm  window_darwin_impl.h  window_darwin_impl.mm  window_impl_darwin.mm  window_platform_darwin.mm
source/platform/linux/: app_handler_linux.cpp  app_handler_linux.h  app_linux.cpp  webview_impl_linux.cpp  webview_linux.cpp  webview_linux_impl.h  webview_platform_linux.cpp  window_impl_linux.cpp  window_linux.cpp  window_linux_impl.h  window_platform_linux.cpp  window_platform_linux.h
source/platform/windows/: app_handler_windows.cpp  app_handler_windows.h  app_windows.cpp  webview_impl_win32.cpp  webview_platform_win32.cpp  webview_platform_win32.h  webview_windows.cpp  webview_windows_impl.cpp  webview_windows_impl.h  window_impl_win32.cpp  window_platform_win32.cpp  window_windows.cpp  window_windows_impl.cpp  window_windows_impl.h
source/utils/: file.h  strings.h  throttle.h  webview_js.h
test/: CMakeLists.txt
test/source/: app_test.cpp  webview_test.cpp  window_test.cpp
