# deskgui - A powerful and flexible C++ library to create web-based desktop applications.
# Copyright (c) 2023 deskgui
# MIT License

cmake_minimum_required(VERSION 3.14...3.22)

project(deskgui_examples LANGUAGES CXX)

add_subdirectory(basic_example)
add_subdirectory(callback_example)
add_subdirectory(embedded_resources_example)
add_subdirectory(splashscreen_example)
